# sddl_py

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
sddl/: README.md  pyproject.toml
sddl/sddl/: __main__.py
sddl_parser/: README.md  __init__.py  api.py  dictionary.py  parser.py  pyproject.toml  rights_enums.py  sid_enum.py  type_enums.py  types.py  well_known_dictionary.py
sddl_parser/sddl_parser/: __init__.py  ace_rights_enums.py  api.py  enums.py  parser.py  parser_conditional_ace.py  parser_sid.py  sid_enum.py  types.py  well_known_dictionary.py
sddl_parser/tests/: test_ace.py  test_conditional_ace.py  test_convert_sids.py  test_parser_acerights.py  test_sddl.py
tests/: test_ace.py  test_sddl.py  test_sddl_flags.py  test_translate.py
